# tvm_example

./: .gitignore  CMakeLists.txt  CMakeLists.txt.back  README.md  config.cmake  scatter_te.py  scatter_tir.py  tvm_test.py  vulkan_test.py
compiled_models/centerpoint_backbone/: deploy_graph.json  inference_engine_tvm_config.hpp  preprocessing_inference_engine_tvm_config.hpp
compiled_models/centerpoint_encoder/: deploy_graph.json  inference_engine_tvm_config.hpp
include/: centerpoint_config.hpp  cpp_test_tvm.hpp  generate_detected_boxes.hpp  network_trt.hpp  pipeline.hpp  postprocess_kernel.hpp  tensorrt_wrapper.hpp  utils.hpp
model/: pts_voxel_encoder_centerpoint.engine
python/: ansor.py  bcnn.py  caffe.py  centerpoint_test.py  get_cuda_info.py  prepare_test_libs.py  quantization.py  scatter_relay.py  scatter_tir.py  tvm_test.py
src/: cpp_deploy.cc  cpp_test_tensorrt.cc  cpp_test_tvm.cc  cuda_cpp_test.cc  generate_detected_boxes.cc  network_trt.cc  postprocess_kernel.cu  tensorrt_wrapper.cc  tvm_runtime_pack.cc
